# liter-llm

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  Taskfile.yml  composer.json  llms.txt  mkdocs.yaml  package.json  pyproject.toml
.ai-rulez/: config.yaml
.ai-rulez/context/: project-overview.md
.github/workflows/: ci-go.yaml  publish.yaml
.task/languages/: elixir.yml  go.yml  node.yml
crates/liter-llm/: Cargo.toml
crates/liter-llm-bindings-core/: Cargo.toml
crates/liter-llm-ffi/: Cargo.toml  liter_llm.h
crates/liter-llm-node/: Cargo.toml  README.md  package.json
crates/liter-llm-php/: Cargo.toml
crates/liter-llm-py/: Cargo.toml
crates/liter-llm-wasm/: Cargo.toml  README.md  package.json
crates/liter-lm/: Cargo.toml
crates/liter-lm-ffi/: Cargo.toml  liter_lm.h
crates/liter-lm-py/: Cargo.toml
crates/liter-lm-wasm/: Cargo.toml
crates/liter-lm/src/: cost.rs  error.rs  lib.rs  tests.rs
crates/liter-lm/src/auth/: azure_ad.rs  bedrock_sts.rs  vertex_oauth.rs
crates/liter-lm/src/client/: config.rs  mod.rs
crates/liter-lm/src/http/: eventstream.rs  mod.rs  request.rs  retry.rs  streaming.rs
crates/liter-lm/src/provider/: anthropic.rs  azure.rs  bedrock.rs  cohere.rs  mod.rs  vertex.rs
crates/liter-lm/src/tower/: fallback.rs  rate_limit.rs  router.rs  tracing.rs
crates/liter-lm/src/types/: chat.rs  common.rs  embedding.rs  mod.rs  models.rs
docs/: index.md
docs/getting-started/: quickstart.md
e2e/c/: Makefile  helpers.c  helpers.h  (+10 more)
scripts/: readme_config.yaml  sync_versions.py
(+218 files in other folders)
